[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blanco-smart-home-api-client"
version = "1.0.0"
description = "Async Python client for the BLANCO Smart Home Cloud API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.9"]
keywords = ["blanco", "smart-home", "api", "aiohttp", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/blancoGDPD/blanco-smart-home-api-client"
"Issue Tracker" = "https://github.com/blancoGDPD/blanco-smart-home-api-client/issues"
"Source" = "https://github.com/blancoGDPD/blanco-smart-home-api-client"

[tool.setuptools.packages.find]
where = ["."]
include = ["blanco_smart_home_api_client*"]

[tool.mypy]
strict = true
python_version = "3.13"
